refactor(tnt): use fluent parsing and modern Java features
- TNT module is now parsed using the fluent parser
- TNTProperties are now a record
- Added nullability annotations to the `tc.oc.pgm.tnt` package (mostly dealt with `@NullMarked` that marks everything as implicitly not-null)
- Minor cosmetic code changes

Signed-off-by: TTtie <me@tttie.cz>