@@ -1,13 +1,14 @@
 package tc.oc.pgm.tnt;
 
-import com.google.common.collect.ImmutableList;
 import java.time.Duration;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.logging.Logger;
 import net.kyori.adventure.text.Component;
 import org.jdom2.Document;
 import org.jdom2.Element;
+import org.jspecify.annotations.NullMarked;
+import org.jspecify.annotations.Nullable;
 import tc.oc.pgm.api.map.MapModule;
 import tc.oc.pgm.api.map.MapTag;
 import tc.oc.pgm.api.map.factory.MapFactory;
@@ -21,11 +22,10 @@ import tc.oc.pgm.regions.RegionFilterApplication;
 import tc.oc.pgm.regions.RegionModule;
 import tc.oc.pgm.util.TimeUtils;
 import tc.oc.pgm.util.xml.InvalidXMLException;
-import tc.oc.pgm.util.xml.XMLUtils;
 
+@NullMarked
 public class TNTModule implements MapModule<TNTMatchModule> {
-  private static final Collection<MapTag> TAGS =
-      ImmutableList.of(new MapTag("autotnt", "Instant TNT"));
+  private static final Collection<MapTag> TAGS = List.of(new MapTag("autotnt", "Instant TNT"));
   public static final int DEFAULT_DISPENSER_NUKE_LIMIT = 16;
   public static final float DEFAULT_DISPENSER_NUKE_MULTIPLIER = 0.25f;
 
@@ -37,7 +37,7 @@ public class TNTModule implements MapModule<TNTMatchModule> {
 
   @Override
   public Collection<MapTag> getTags() {
-    return properties.instantIgnite ? TAGS : Collections.emptyList();
+    return properties.instantIgnite() ? TAGS : List.of();
   }
 
   @Override
@@ -48,12 +48,13 @@ public class TNTModule implements MapModule<TNTMatchModule> {
   public static class Factory implements MapModuleFactory<TNTModule> {
     @Override
     public Collection<Class<? extends MapModule<?>>> getSoftDependencies() {
-      return ImmutableList.of(RegionModule.class);
+      return List.of(RegionModule.class);
     }
 
     @Override
-    public TNTModule parse(MapFactory factory, Logger logger, Document doc)
+    public @Nullable TNTModule parse(MapFactory factory, Logger logger, Document doc)
         throws InvalidXMLException {
+      var parser = factory.getParser();
       Float yield = null;
       Float power = null;
       boolean instantIgnite = false;
@@ -68,68 +69,56 @@ public class TNTModule implements MapModule<TNTMatchModule> {
       for (Element tntElement : doc.getRootElement().getChildren("tnt")) {
         exists = true;
         instantIgnite =
-            XMLUtils.parseBoolean(
-                XMLUtils.getUniqueChild(tntElement, "instantignite"), instantIgnite);
-        blockDamage =
-            XMLUtils.parseBoolean(XMLUtils.getUniqueChild(tntElement, "blockdamage"), blockDamage);
-        yield =
-            XMLUtils.parseNumber(XMLUtils.getUniqueChild(tntElement, "yield"), Float.class, yield);
-        power =
-            XMLUtils.parseNumber(XMLUtils.getUniqueChild(tntElement, "power"), Float.class, power);
+            parser.parseBool(tntElement, "instantignite").child().optional(instantIgnite);
+        blockDamage = parser.parseBool(tntElement, "blockdamage").child().optional(blockDamage);
+        yield = parser.parseFloat(tntElement, "yield").child().optional(yield);
+        power = parser.parseFloat(tntElement, "power").child().optional(power);
         dispenserNukeLimit =
-            XMLUtils.parseNumber(
-                XMLUtils.getUniqueChild(tntElement, "dispenser-tnt-limit"),
-                Integer.class,
-                dispenserNukeLimit);
-        dispenserNukeMultiplier =
-            XMLUtils.parseNumber(
-                XMLUtils.getUniqueChild(tntElement, "dispenser-tnt-multiplier"),
-                Float.class,
-                dispenserNukeMultiplier);
-        licensing =
-            XMLUtils.parseBoolean(XMLUtils.getUniqueChild(tntElement, "licensing"), licensing);
+            parser.parseInt(tntElement, "dispenser-tnt-limit").child().optional(dispenserNukeLimit);
+        dispenserNukeMultiplier = parser
+            .parseFloat(tntElement, "dispenser-tnt-multiplier")
+            .child()
+            .optional(dispenserNukeMultiplier);
+        licensing = parser.parseBool(tntElement, "licensing").child().optional(licensing);
         friendlyDefuse =
-            XMLUtils.parseBoolean(
-                XMLUtils.getUniqueChild(tntElement, "friendly-defuse"), friendlyDefuse);
-
-        Element fuseElement = XMLUtils.getUniqueChild(tntElement, "fuse");
-        if (fuseElement != null) {
-          fuse = XMLUtils.parseDuration(fuseElement, fuse);
-
-          if (TimeUtils.isLongerThan(fuse, Duration.ofSeconds(4))) {
-            // TNT disappears on the client after 4 seconds, no way to extend it
-            // If this is ever really needed, we could spawn new entities on the client every 4
-            // seconds
-            throw new InvalidXMLException("TNT fuse cannot be longer than 4 seconds", fuseElement);
-          }
-        }
+            parser.parseBool(tntElement, "friendly-defuse").child().optional(friendlyDefuse);
+        fuse = parser
+            .duration(tntElement, "fuse")
+            .child()
+            .validate((duration, node) -> {
+              if (TimeUtils.isLongerThan(duration, Duration.ofSeconds(4))) {
+                // TNT disappears on the client after 4 seconds, no way to extend it
+                // If this is ever really needed, we could spawn new entities on the client every 4
+                // seconds
+                throw new InvalidXMLException("TNT fuse cannot be longer than 4 seconds", node);
+              }
+            })
+            .optional(fuse);
       }
 
       if (!blockDamage) {
         factory
             .needModule(RegionModule.class)
             .getRFAContextBuilder()
-            .prepend(
-                new RegionFilterApplication(
-                    RFAScope.BLOCK_BREAK,
-                    EverywhereRegion.INSTANCE,
-                    new DenyFilter(new CauseFilter(CauseFilter.Cause.EXPLOSION)),
-                    (Component) null,
-                    false));
+            .prepend(new RegionFilterApplication(
+                RFAScope.BLOCK_BREAK,
+                EverywhereRegion.INSTANCE,
+                new DenyFilter(new CauseFilter(CauseFilter.Cause.EXPLOSION)),
+                (Component) null,
+                false));
       }
 
       return exists
-          ? new TNTModule(
-              new TNTProperties(
-                  yield,
-                  power,
-                  instantIgnite,
-                  blockDamage,
-                  fuse,
-                  dispenserNukeLimit,
-                  dispenserNukeMultiplier,
-                  licensing,
-                  friendlyDefuse))
+          ? new TNTModule(new TNTProperties(
+              yield,
+              power,
+              instantIgnite,
+              blockDamage,
+              fuse,
+              dispenserNukeLimit,
+              dispenserNukeMultiplier,
+              licensing,
+              friendlyDefuse))
           : null;
     }
   }
